=======
CHANGES
=======

4.0.0 (unreleased)
------------------

- log DEBUG when loading translations from directories.

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.


3.8.0 (2012-03-15)
------------------

- Added optional ``domain`` attribute to ``registerTranslations`` directive to
  only load the specified translation domain. Allows to move catalogs to
  `/usr/share/locale` and avoid loading hundreds of unrelated domains.

- Include meta.zcml files in our own zcml configuration as needed, added a
  test for our configure.zcml.

- Update zope.i18n.NAME_RE to be identical to zope.tal as required by the
  comment next to it. Fixes #611746.


3.7.4 (2010-07-08)
------------------

- Added missing test dependency on ``zope.testing``.


3.7.3 (2010-04-30)
------------------

- Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest.

3.7.2 (2009-12-14)
------------------

- It's a critical error when the ``GetText`` library is unavailable
  and compilation is required.

- Use getSiteManager rather than getGlobalSiteManager in ZCML (these
  should be one in the same in any non-fancy setup, however if you've
  hooked getSiteManager, you want the ZCML handler to use the hooked
  version).

3.7.1 (2009-08-07)
------------------

- Fixed the interpackage translation domain merging feature to actually work.
  We need to defer the merging into the ZCML handler execution phase, as the
  utilities don't exist yet during the ZCML parsing phase. Thx to Andreas
  Zeidler for finding and fixing the issue in PlacelessTranslationService in
  the first place.

- Fix translation domains translating a message for a different domain. In the
  process, fix testMessageIDTranslateForDifferentDomain which seemed to work by
  mistake as the "other" and "default" domains used the same catalog. This is
  basically a reversion of 39991.


3.7.0 (2009-03-18)